<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/official_activity"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/header_title_official"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/header"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="11"
            android:orientation="vertical">

            <TextView
                android:id="@+id/vanPhong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="22sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/van_phong" />

            <TextView
                android:id="@+id/ten"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="22sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/ten" />

            <TextView
                android:id="@+id/dang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="22sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/dang" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/image_official"
                app:srcCompat="@drawable/non_image_user"
                tools:ignore="ImageContrastCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/addressTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/address" />

                <TextView
                    android:id="@+id/addressContent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="3"
                    android:textSize="18sp"
                    android:autoLink="map"
                    android:textColor="@color/white"
                    android:textColorLink="@color/white"
                    android:text="@string/address" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/phoneTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/phone" />

                <TextView
                    android:id="@+id/phoneContent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="3"
                    android:textSize="18sp"
                    android:autoLink="phone"
                    android:textColor="@color/white"
                    android:textColorLink="@color/white"
                    android:text="@string/phone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/emailTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/email" />

                <TextView
                    android:id="@+id/emailContent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="3"
                    android:textSize="18sp"
                    android:autoLink="email"
                    android:textColor="@color/white"
                    android:textColorLink="@color/white"
                    android:text="@string/email" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/webSiteTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/website" />

                <TextView
                    android:id="@+id/webSiteContent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="3"
                    android:textSize="18sp"
                    android:autoLink="web"
                    android:textColor="@color/white"
                    android:textColorLink="@color/white"
                    android:text="@string/website" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/facebookImageView"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/facebook_icon"
                    android:contentDescription="@string/image_facebook" />

                <ImageView
                    android:id="@+id/googlePlusImageView"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/google_plus_icon"
                    android:contentDescription="@string/image_google_plus" />

                <ImageView
                    android:id="@+id/twitterImageView"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/image_twitter"
                    app:srcCompat="@drawable/twitter_icon" />

                <ImageView
                    android:id="@+id/youtubeImageView"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/youtube_icon"
                    android:contentDescription="@string/image_youtube"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>