<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/official_activity"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/header_title_official"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/header"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="11"
            android:orientation="vertical">

            <TextView
                android:id="@+id/vanPhong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="22sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/van_phong" />

            <TextView
                android:id="@+id/ten"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="40sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/ten" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:layout_margin="20dp"
                android:adjustViewBounds="true"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/image_official"
                app:srcCompat="@drawable/non_image_user"
                tools:ignore="ImageContrastCheck" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>